Layout fix, Add Retrofit

--- a/app/src/main/res/layout/dialog_change_color.xml
+++ b/app/src/main/res/layout/dialog_change_color.xml
@@ -16,125 +16,134 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="16dp"
-        android:gravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <HorizontalScrollView
+        android:layout_width="0dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="@id/change_color_title"
+        app:layout_constraintEnd_toEndOf="@id/change_color_title"
         app:layout_constraintTop_toBottomOf="@id/change_color_title"
         >
 
-        <RadioButton
-            android:id="@+id/change_color_red"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/red"
-            android:onClick="onColorChange"
-            />
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
-        <RadioButton
-            android:id="@+id/change_color_pink"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/pink"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_red"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/red"
+                android:onClick="onColorChange"
+                />
 
-        <RadioButton
-            android:id="@+id/change_color_purple"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/purple"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_pink"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/pink"
+                android:onClick="onColorChange"
+                />
 
-        <RadioButton
-            android:id="@+id/change_color_blue"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/blue"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_purple"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/purple"
+                android:onClick="onColorChange"
+                />
 
-        <RadioButton
-            android:id="@+id/change_color_cyan"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/cyan"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_blue"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/blue"
+                android:onClick="onColorChange"
+                />
 
-        <RadioButton
-            android:id="@+id/change_color_green"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/green"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_cyan"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/cyan"
+                android:onClick="onColorChange"
+                />
 
-        <RadioButton
-            android:id="@+id/change_color_yellow"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/yellow"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_green"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/green"
+                android:onClick="onColorChange"
+                />
 
-        <RadioButton
-            android:id="@+id/change_color_orange"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/orange"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_yellow"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/yellow"
+                android:onClick="onColorChange"
+                />
 
-        <RadioButton
-            android:id="@+id/change_color_brown"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/brown"
-            android:onClick="onColorChange"
-            />
-        <RadioButton
-            android:id="@+id/change_color_teal"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@null"
-            android:backgroundTint="@color/deep_orange"
-            android:onClick="onColorChange"
-            />
+            <RadioButton
+                android:id="@+id/change_color_orange"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/orange"
+                android:onClick="onColorChange"
+                />
 
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/change_color_brown"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/brown"
+                android:onClick="onColorChange"
+                />
+            <RadioButton
+                android:id="@+id/change_color_teal"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginLeft="8dp"
+                android:background="@drawable/custom_checkbox"
+                android:button="@null"
+                android:backgroundTint="@color/deep_orange"
+                android:onClick="onColorChange"
+                />
+
+        </RadioGroup>
+
+    </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
